docs：更新架构与系统设计至 V2.4
* 重构 **AttackConfig** 设计理念，强调“**零转换（zero-translation）**”原则，直接映射 CSV / 数据源中的原始字段，减少中间层语义重构。
* 在 **DamagePipeline** 中引入 **Damage Audit Trail（伤害审计链）**，强制记录所有数值修正过程，确保伤害计算可追溯与可调试。
* 优化执行阶段（**Execution Phases**），新增 **AttackTagResolver** 与动态快照（dynamic snapshotting）机制。
* 增强 **CombatSpace**，支持完整的 3D 碰撞检测与高度感知物理判定（如处理下落攻击）。
* 在 **Aura Theory** 中实现基于原生标签的“零转换”ICD（元素附着内置冷却）管理机制。
* 更新核心设计原则，加入**空间广播（spatial broadcasting）**与**物理高度感知**的系统级支持。

--- a/docs/architecture/system/系统设计详述.md
+++ b/docs/architecture/system/系统设计详述.md
@@ -1,24 +1,27 @@
-# 原神伤害计算器 - 系统设计详述 (V2)
+# 原神伤害计算器 - 系统设计详述 (V2.4)
 
 ## 1. 伤害计算体系 (DamagePipeline)
 
-### 1.1 执行阶段 (Execution Phases)
-`DamagePipeline` 是战斗计算的核心驱动，分为以下严格顺序的阶段：
-1.  **附魔处理 (`_handle_infusion`)**: 检查 `CombatEntity` 的 `active_effects`，根据优先级（水 > 火 > 冰 或 时间先后）决定普攻/重击/下落的元素属性。
-2.  **属性快照 (`_snapshot`)**: 利用 `AttributeCalculator` 提取来源实体的即时属性（攻击、生命、精通、双暴、元素加成等），封装入 `DamageContext`。
-3.  **计算前修正**: 发布 `BEFORE_CALCULATE` 事件，允许外部系统动态修改 `ctx.stats` 中的各乘区参数。
-4.  **碰撞分发 (`_dispatch_broadcast`)**: 调用 `CombatSpace` 物理引擎。根据 `HitboxConfig` 进行范围检索，找到所有命中的 `CombatEntity`。
-5.  **受击处理**: 被命中的实体调用 `handle_damage()`，在此阶段同步更新 ICD 和元素附着状态，并将反应结果回填至 `Damage` 对象。
-6.  **反应结算**: 根据回填的 `reaction_results`，计算增幅倍率或触发剧变反应逻辑（如生成草原核）。
-7.  **数值合并**: 应用防御区、抗性区、暴击区与独立乘区公式，产出最终伤害。
+### 1.1 伤害审计机制 (Damage Audit Trail)
+V2.4 引入了强制性的审计机制。`DamageContext` 不再只是一个数值容器，而是一个带有“来源记录”的账本。
+*   **审计接口**: 所有数值修改必须调用 `ctx.add_modifier(source, stat, value, op)`。
+*   **透明度**: 每一笔伤害都持有完整的 `audit_trail` 序列，记录了从角色面板到最终暴击判定的所有贡献因素。
+
+### 1.2 执行阶段 (Execution Phases)
+1.  **附魔处理**: 决定普攻/重击/下落的元素属性。
+2.  **标签解析与快照 (`_snapshot`)**: 
+    *   利用 `AttackTagResolver` 将 `attack_tag` 映射为逻辑分类（如 `NORMAL`, `SKILL`）。
+    *   根据分类动态从面板提取对应的“普通攻击伤害加成”等数值，并通过审计接口记录为“总和伤害加成区”。
+3.  **计算前修正 (Event-Driven)**: 发布 `BEFORE_CALCULATE` 事件。Effect 必须在此阶段注入外部增益。
+4.  **空间广播与受击**: 调用 `CombatSpace` 进行几何检索。
+5.  **数值合算**: 汇总所有审计条目，执行防御、抗性、暴击及独立乘区的乘算。
 
 ## 2. 空间与物理系统 (CombatSpace)
 
-### 2.1 几何碰撞判定
-所有攻击在 (X, Z) 平面上进行 2D 投影判定：
-*   **圆柱 (CYLINDER)**: 最常用的判定方式，支持半径和高度过滤。
-*   **长方体 (BOX)**: 支持相对攻击者朝向的长度、宽度定义。
-*   **单体 (SINGLE)**: 精确锁定逻辑，但支持在 `radius > 0` 时自动退化为范围判定以提升鲁棒性。
+### 2.1 3D 碰撞判定
+伤害广播支持完整的 X, Y, Z 空间判定：
+*   **高度感知**: 角色和攻击判定具有真实的垂直坐标。
+*   **物理触发**: 下落攻击的“落地冲击”命中点不再由帧数预定，而是由物理触地瞬间 (Y <= 0) 动态触发。
 
 ### 2.2 位移与同步
 *   **自驱动位移**: 角色执行冲刺或特定技能动作时，坐标直接在 `advance_frame` 中更新。
@@ -32,16 +35,16 @@
 *   **取消窗口 (Cancel Window)**: 允许在特定帧后通过切换动作来中断当前动作的后摇。
 *   **回调机制**: 动作执行完成后，通过 `origin_skill` 触发后续逻辑。
 
-## 4. 元素附着理论 (Aura Theory V2)
+## 4. 元素附着理论 (Aura Theory V2.4)
 
-### 4.1 ICD 管理
-V2 实现了基于标签的全局 ICD 控制。
-*   **标签隔离**: “普通攻击”、“元素战技”等不同攻击源拥有独立的计数器序列。
-*   **重置规则**: 遵循 2.5s / 3 次打击重置的通用规则，支持特定技能的独立附着设置。
+### 4.1 原生 ICD 管理
+V2.4 实现了基于 **“零翻译”原生标签** 的全局 ICD 控制。
+*   **原生映射**: ICD 标签（如 `FurinaElementalSkill`）直接从 `data.py` 中的 `icd_tag` 字段索引，保持与实测 CSV 完全一致。
+*   **重置规则**: 遵循 2.5s / 3 次打击重置的通用规则，支持序列长度感知的动态附着。
 
 ### 4.2 反应映射
 `ReactionSystem` 建立了一套完整的反应优先级矩阵，确保在多元素环境下（如雷草水）反应触发的确定性。
 
 ---
 *版本: v2.5.0*
-*更新日期: 2026-02-07*
+*更新日期: 2026-02-13*
