--- a/docs/core/伤害系统.md
+++ b/docs/core/伤害系统.md
@@ -8,30 +8,33 @@
 伤害的载体，包含了攻击的本质属性：
 - **倍率 (`damage_multiplier`)**: 基础伤害百分比。
 - **元素 (`element`)**: 攻击的元素类型与元素量 (Gauge)。
-- **攻击契约 (`config`)**: 即 `AttackConfig`，定义了 ICD 标签、打击类型和 Hitbox。
-- **实时属性 (`panel`)**: 存储该次伤害生效时的修正数据。
+- **审计数据 (`data['audit_trail']`)**: 存储本次伤害的所有计算来源记录。
 
-### 1.2 DamageContext
-计算过程中的上下文快照，持有计算所需的中间变量（如各乘区系数），确保计算逻辑不直接修改原始实体属性。
+### 1.2 DamageContext (审计上下文)
+计算过程中的上下文快照。V2.4 引入了 **“伤害审计链 (Audit Trail)”**：
+- **审计接口 (`add_modifier`)**: 所有增益（Effect、面板等）必须通过此接口注入数值，严禁直接修改字典。
+- **记录条目 (`ModifierRecord`)**: 包含 `source` (来源名)、`stat` (属性名)、`value` (数值) 和 `op` (加算/乘算)。
 
 ---
 
 ## 2. 伤害流水线 (DamagePipeline)
 
-每当触发 `BEFORE_DAMAGE` 事件时，`DamageSystem` 会启动 `DamagePipeline` 执行以下七个阶段：
+每当触发 `BEFORE_DAMAGE` 事件时，`DamageSystem` 会启动 `DamagePipeline` 执行以下阶段：
 
-### 第一阶段：属性快照 (`_snapshot`)
-系统通过 `AttributeCalculator` 抓取攻击者当前的实时面板（攻击力、精通、双暴、伤害加成等），并将其存入 `DamageContext`。
+### 第一阶段：标签解析与快照 (`_snapshot`)
+1. **解析分类**: 利用 `AttackTagResolver` 将 `attack_tag` 映射为 `NORMAL`, `SKILL` 等逻辑分类。
+2. **属性注入**: 抓取基础面板（攻击、精通等），并通过 `add_modifier` 记录为“角色基础面板”。
+3. **动态增伤区**: 根据解析分类，自动汇总对应的“普通攻击伤害加成”等数值，记录为“总和伤害加成区”。
 
-### 第二阶段：计算前修正 (事件驱动)
+### 第二阶段：计算前修正 (审计注入)
 发布 `BEFORE_CALCULATE` 事件。
-- **用途**: 允许各种效果 (Effect) 监听此事件，并根据当前攻击类型动态修改 `DamageContext.stats`（例如：增加 15% 重击暴击率）。
+- **强制规范**: 所有 Effect 必须调用 `ctx.add_modifier(source="来源名", stat="属性", value=X)` 注入增益。
+- **追溯性**: 此时注入的数值将清晰出现在最终的审计报告中。
 
-### 第三阶段：物理广播与碰撞 (`_dispatch_broadcast`)
-对接 `CombatSpace`。
-- **单体**: 直接作用于锁定目标。
-- **AOE**: 根据 Hitbox 形状（圆柱、长方体等）在场景中检索受击者。
-- **结果**: 建立 `damage.target` 引用，并触发目标的 `handle_damage` 接口（执行 ICD 判定）。
+### 第三阶段：空间广播与碰撞
+对接 `CombatSpace` 执行 3D 碰撞判定。
+- **高度感知**: 支持根据 Y 轴坐标判断下落攻击的触地瞬间。
+- **结果**: 建立 `target` 引用并触发 ICD 判定。
 
 ### 第四阶段：反应预处理 (`_preprocess_reaction_stats`)
 根据第三阶段反馈的反应结果（如增幅反应、激化），注入对应的倍率加成或固定伤害加成。
@@ -67,9 +70,9 @@
 
 ## 4. 扩展与开发建议
 
-1. **新增乘区**: 若需引入新的独立乘区，建议在 `BEFORE_CALCULATE` 事件中修改 `ctx.stats["独立乘区系数"]`。
-2. **特殊缩放**: 若技能基于防御力（如阿贝多），请在技能初始化时通过 `damage.set_scaling_stat("防御力")` 指定。
-3. **性能注意**: `DamagePipeline` 在高并发模拟下会频繁运行，应避免在 `BEFORE_CALCULATE` 监听器执行复杂的 IO 或循环操作。
+1. **新增增益**: 严禁直接修改 `ctx.stats`。请使用 `ctx.add_modifier(source="XX效果", stat="独立乘区系数", value=1.1, op="MULT")`。
+2. **伤害追溯**: 计算完成后，可通过读取 `damage.data["audit_trail"]` 序列来调试或展示伤害构成。
+3. **原生数据映射**: 确保 `data.py` 中的原生 Key 与技能装配逻辑一致，系统会自动根据 Key 生成伤害名称。
 
 ---
 *版本: V2.3.1*
