--- a/docs/core/技能系统.md
+++ b/docs/core/技能系统.md
@@ -1,56 +1,69 @@
 # Core - 技能系统 (Skill System)
 
-技能系统是连接 `Character` 实体与 `ActionManager` (ASM) 引擎的桥梁，负责定义战斗逻辑的回调、数值规则以及**动作生成**。
+技能系统是连接 `Character` 实体与 `ActionManager` (ASM) 引擎的翻译层，负责将玩家意图转换为物理动作指令。
 
-## 1. 核心设计：技能即动作生成器
-在 V2 架构中，技能对象不再持有计时器或状态，而是作为 **“动作生成器 (Action Producer)”** 存在。角色通过技能来调用动作，每一个技能都与其对应的物理动作块紧密绑定。
+---
 
-### 1.1 核心契约：意图解析
-技能不接收物理坐标参数，而是接收 **“执行意图 (Intent)”**。
-- **`to_action_data(intent: Dict[str, Any])`**: 核心接口。
-    - **逻辑**: 技能根据意图字典（如 `{"type": "Hold", "stack": 2}`）从其绑定的动作库中检索或构造对应的 `ActionFrameData`。
-    - **物理属性**: 生成的 `ActionFrameData` 已经固化了该动作应有的位移 (`horizontal_dist`)、判定帧和时长。
-- **`on_execute_hit(target, index)`**: 命中回调。由 ASM 引擎在到达判定帧时触发。此处负责实例化 `Damage` 对象并发布 `BEFORE_DAMAGE` 事件。
-- **`on_frame_update()`**: 每帧回调。用于处理技能生命周期内的特殊逻辑，如召唤实体的位移同步。
+## 1. 核心设计：无状态动作工厂 (Stateless Factory)
 
-### 1.2 元数据发现 (Metadata Discovery)
-为了让 UI 能够动态生成参数编辑器，角色与技能系统必须暴露其参数模式。
-- **`get_action_metadata()`**: 
-    - **职责**: 返回该角色支持的动作及其对应的参数 Schema。
-    - **Schema 结构**:
-        ```python
-        {
-            "action_key": {
-                "label": "显示名称",
-                "params": [
-                    {"key": "type", "label": "施放方式", "type": "select", "options": ["点按", "长按"]},
-                    {"key": "index", "label": "段落", "type": "int", "min": 1, "max": 5}
-                ]
-            }
-        }
-        ```
+在 V2.4 架构中，技能对象不再持有任何业务状态（如连击索引、计时器），它们唯一的职责是 **“根据意图映射配置”**。
 
-## 2. 技能与动作的绑定
-这种绑定确保了物理表现的唯一性与准确性。UI 层只需要传达“做什么”，而“怎么做”以及“位移多少”由技能及其绑定的动作数据决定。
+### 1.1 核心接口契约
+- **`to_action_data(intent)`**: 
+    - **逻辑**: 根据意图字典从角色 `data.py` 中提取对应的帧数与物理配置。
+    - **自动连招**: 对于普攻，该方法只需返回对应段位的元数据，ASM 会自动处理段位推进。
+- **`on_execute_hit(hit_index)`**: 
+    - **职责**: 到达判定帧时，发布 `BEFORE_DAMAGE` 事件。
+    - **规范**: 必须使用“空间广播”模式，严禁在此时手动搜索单一目标。
 
-## 3. 实现规范
+---
+
+## 2. 标准化技能组件
+
+项目提供了一系列通用组件，角色只需通过注入 `data.py` 的字典即可完成实装。
+
+### 2.1 普通攻击 (`NormalAttackSkill`)
+- **自动映射**: 自动关联 `ACTION_FRAME_DATA["NORMAL_X"]` 和 `ATTACK_DATA["NORMAL_X"]`。
+- **多段支持**: 通过 `hit_index` 自动索引 `NORMAL_ATTACK_DATA` 中的倍率。
+
+### 2.2 移动技能 (`DashSkill`, `JumpSkill`)
+- **物理化**: 产出带有类型标签的动作，由 ASM 驱动。位移逻辑在 `on_frame_update` 回调中实现。
+
+---
+
+## 3. 实现规范 (示例)
+
 ```python
-class MySkill(SkillBase):
+class MyElementalSkill(SkillBase):
     def to_action_data(self, intent=None) -> ActionFrameData:
-        # 根据意图决定产出哪种动作块
-        if intent and intent.get("type") == "Hold":
-            return self.action_assets["HOLD_BLOCK"] 
-        return self.action_assets["PRESS_BLOCK"]
+        # 1. 从局部配置中心获取数据
+        frames = ACTION_FRAME_DATA["SKILL_PRESS"]
+        physics = ATTACK_DATA["SKILL_PRESS"]
+        
+        # 2. 构造并返回
+        return ActionFrameData(
+            name="SKILL_PRESS",
+            action_type="elemental_skill",
+            total_frames=frames["total_frames"],
+            hit_frames=frames["hit_frames"],
+            interrupt_frames=frames["interrupt_frames"],
+            attack_config=AttackConfig(
+                element_u=physics["element_u"],
+                hitbox=HitboxConfig(shape=AOEShape.SPHERE, radius=physics["radius"])
+            ),
+            origin_skill=self
+        )
 
-    def on_execute_hit(self, target, hit_index):
-        # 具体的伤害结算逻辑
-        dmg = Damage(100.0, (Element.PYRO, 1.0), DamageType.SKILL, "我的伤害")
+    def on_execute_hit(self, hit_index: int):
+        # 触发伤害广播
         self.caster.event_engine.publish(GameEvent(EventType.BEFORE_DAMAGE, ...))
 ```
 
-## 4. 注册与绑定
-角色子类通过在 `_setup_character_components` 中实例化技能并存入 `self.skills` 字典来完成绑定。
+---
+
+## 4. 元数据发现 (Metadata Discovery)
+UI 通过类方法 `get_action_metadata()` 获取参数 Schema（如滑块、下拉框），生成的 `intent` 字典将作为参数传回 `to_action_data`。
 
 ---
-*版本: V2.3 (Action Binding)*
-*更新日期: 2026-02-09*
+*版本: V2.4 (Stateless Factory)*
+*更新日期: 2026-02-12*
