--- a/docs/architecture/mechanics/数据契约与攻击定义.md
+++ b/docs/architecture/mechanics/数据契约与攻击定义.md
@@ -1,17 +1,22 @@
-# 架构设计：数据契约与攻击定义 (V2.1)
+# 架构设计：数据契约与攻击定义 (V2.4)
 
-## 1. 核心契约：AttackConfig
-`AttackConfig` 定义了攻击的本质属性。
+## 1. 核心契约：AttackConfig (物理与机制契约)
+`AttackConfig` 定义了攻击的本质属性。V2.4 架构下，该契约强调“零翻译”的原生数据读取。
 
-### 1.1 字段规范
-| 字段 | 类型 | 说明 |
+### 1.1 字段规范与原生映射
+为了支持实测数据的直接录入，系统在装配阶段执行以下自动映射：
+
+| CSV/Data 原生描述 | 内部枚举 (`Enum`) | 逻辑说明 |
 | :--- | :--- | :--- |
-| `element_u` | float | 初始元素附着量 |
-| `icd_tag` | str | 用于 ICD 计数器分组的标签 |
-| **`strike_type`** | **Enum** | **打击类型 (DEFAULT, PIERCE, BLUNT, THRUST, SLASH)** |
-| `is_deployable` | bool | 决定是否能触发“生成部署物”逻辑 |
-| `is_ranged` | bool | 判定是否为远程攻击 |
-| `hitbox` | HitboxConfig | 物理参数，决定 AOE 形状和碰撞范围 |
+| **球** | `AOEShape.SPHERE` | 以坐标 + Offset 为中心 |
+| **长方体** | `AOEShape.BOX` | 三轴尺寸判定 |
+| **圆柱** | `AOEShape.CYLINDER` | XZ轴圆判定，Y轴高度判定 |
+| **默认 / 突刺 / 切割** | `StrikeType` | 打击感与物理交互规则 |
+
+### 1.2 机制标识
+*   **`attack_tag`**: 原始数据表标签，用于增伤分类解析。
+*   **`icd_tag` / `icd_group`**: 强制要求的附着规则标识。
+*   *注：`element_u` 已移至 `Damage` 对象在运行时从原生字典获取。*
 
 ## 2. 物理契约：HitboxConfig
 描述攻击在 `CombatSpace` 中的覆盖范围。
