--- a/docs/core/动作状态机.md
+++ b/docs/core/动作状态机.md
@@ -1,36 +1,54 @@
 # Core - 动作状态机 (ASM Engine)
 
-`ActionManager` 是仿真的心脏，负责处理实体的所有动作（普攻、技能、冲刺等）的时间轴管理。
-
-## 1. 核心概念
-ASM 引擎将动作抽象为 **物理帧序列 (Frames)**，实现高精度的动作表现与取消逻辑。
-
-### 1.1 ActionFrameData (动作元数据)
-定义了一个动作固有的物理与时间参数。这些参数由技能系统在实例化动作时提供，UI 无法直接干预。
-- **`name`**: 动作内部标识。
-- **`total_frames`**: 动画总时长。
-- **`hit_frames`**: 伤害判定帧序列。
-- **`horizontal_dist`**: 该动作自带的水平位移量。由 ASM 在执行过程中平摊到每一帧。
-- **`cancel_windows`**: 允许被其他动作取消的起始帧字典（如 `{"dash": 12}`）。
-- **`origin_skill`**: 绑定的逻辑回调对象。
-
-### 1.2 ActionInstance (动作实例)
-代表当前正在执行的动作，持有已流逝帧数和待处理的判定点。
-
-## 2. 驱动逻辑
-
-### 2.1 请求动作 (`request_action`)
-外部通过 `ActionFrameData` 请求执行新动作。`ActionManager` 会检查：
-1. **取消窗口**: 如果当前动作已进入 `cancel_window` 定义的阈值，则中断当前动作。
-2. **状态切换**: 如果无法取消，则拒绝新动作请求。
-
-### 2.2 每一帧更新 (`on_frame_update`)
-由 `Simulator` 或 `Character` 在每帧调用：
-1. **帧计数**: `elapsed_frames` 递增。
-2. **位移处理**: 自动更新上下文中的全局位移计数（基于 `horizontal_dist`）。
-3. **技能回调**: 若绑定了 `origin_skill`，则调用其 `on_frame_update()`。
-4. **命中判定**: 到达判定点时触发 `_trigger_hit()`，通过 `origin_skill` 的 `on_execute_hit()` 回调业务逻辑。
+`ActionManager` 是仿真的核心驱动器，负责实体动作的物理时序、连招管理以及精细化取消逻辑。
 
 ---
-*版本: V2.2 (Displacement Intrinsic)*
-*更新日期: 2026-02-09*
+
+## 1. 核心数据结构
+
+### 1.1 ActionFrameData (动作元数据)
+描述一个动作固有的物理与时间参数。在 V2.4 中，引入了类型感知与连招索引。
+- **`action_type`**: 业务类型标签（如 `normal_attack`, `dash`, `elemental_skill`）。用于全局中断判定与逻辑重置。
+- **`combo_index`**: 连招段位标识。`0` 代表非连招动作，`1+` 代表具体段位。
+- **`interrupt_frames`**: 取消窗口字典。
+    - *匹配逻辑*：优先查找 `action_type` 对应的帧数，若无则查找 `any` 通配符。
+- **`hit_frames`**: 伤害判定点序列（1-based）。
+
+### 1.2 ActionInstance (动作实例)
+代表当前正在物理运行的动作，持有 `elapsed_frames`（已流逝帧数）。
+
+---
+
+## 2. 自动化连招管理 (V2.4)
+
+ASM 引擎现在内置了对普攻连招的逻辑支持：
+
+1.  **自动段位分配**：
+    当请求类型为 `normal_attack` 的动作且未指定 `combo_index` 时，ASM 会自动根据当前的 `combo_counter` 分配段位。
+2.  **连击重置 (Reset Timer)**：
+    - **超时重置**：若实体进入 `IDLE` 状态超过 120 帧（2 秒），连击计数器自动归 1。
+    - **覆盖重置**：当执行非普攻类动作（如技能、冲刺）时，连击计数器立即归 1（除非特定角色有“连招保持”特性）。
+3.  **循环机制**：
+    连击计数器达到 `max_combo`（默认为 5）后，下一次普攻自动回到 1 段。
+
+---
+
+## 3. 驱动逻辑
+
+### 3.1 动作请求流程 (`request_action`)
+1.  **连招同步**：根据上述规则更新 `combo_index` 和 `combo_counter`。
+2.  **中断检查**：
+    - 对比 `current_action.interrupt_frames[next_action.action_type]` 与 `current_action.elapsed_frames`。
+    - 若满足条件，则终止当前动作并启动新动作。
+3.  **结果反馈**：若无法中断，则直接返回 `False` 拒绝请求。
+
+### 3.2 帧驱动 (`on_frame_update`)
+- **位移处理**：将 `horizontal_dist` 平摊到总帧数执行位移。
+- **命中触发**：
+    - 到达判定点时，执行 `_trigger_hit()`。
+    - 触发 `origin_skill.on_execute_hit(hit_index)`。
+    - **注意**：此时不应传递目标，而应由技能通过系统执行空间广播。
+
+---
+*版本: V2.4 (Automated Combo Chain)*
+*更新日期: 2026-02-12*
