docs: 更新 CombatSpace 和模拟流程架构
* 更新模拟流程图，以反映新的逐帧驱动逻辑以及 `Space.set_team` 关系。

--- a/docs/architecture/combat_space/场景化实体引擎.md
+++ b/docs/architecture/combat_space/场景化实体引擎.md
@@ -1,22 +1,36 @@
 # 架构设计：场景化实体引擎 (CombatSpace)
 
 ## 1. 概述
-本设计将战场抽象为一个 **2D 连续坐标空间 (X, Z)**，辅以高度元数据 (Y)。系统专注于处理实体的空间分布与伤害广播，而不处理实体间的物理挤压交互。
+本设计将战场抽象为一个 **2D 连续坐标空间 (X, Z)**，辅以物理高度 (Y)。在 V2.4 架构中，`CombatSpace` 进化为 **“战斗世界管理器”**，它不仅负责实体的空间检索，还作为逻辑队伍 (`Team`) 的宿主，协调物理感知与逻辑驱动。
 
-## 2. 空间模型
-### 2.1 坐标系统
-- **核心坐标 (X, Z)**：用于所有 AOE 形状（圆、矩形、扇形）的碰撞判定。
-- **元数据高度 (Y)**：不参与空间检索。仅作为数值参数（如下落攻击高度）传递给伤害计算流水线。
+## 2. 核心职责
+### 2.1 实体管理 (Separated Storage)
+- **非玩家实体**：敌人 (Enemy)、环境物 (Neutral) 及召唤物 (Summon) 存储在空间内部的 `_entities` 列表中。
+- **角色本体**：不再直接注册进空间列表，而是由 `Team` 实例持有。
+- **动态感知**：当执行空间查询（如 AOE 判定）时，空间会自动合并 `Team.current_character` 与 `_entities[Faction.PLAYER]` 的结果。
 
-### 2.2 位移规则 (Displacement Logic)
-- **禁用交互位移**：忽略由攻击引起的受击者位移（无击退、无吸引）。
-- **自驱动位移**：仅处理由于技能释放（如冲刺、闪现）导致的攻击者自身位置变更。位置更新发生在伤害广播之前。
+### 2.2 级联驱动 (Cascade Update)
+`CombatSpace.on_frame_update` 负责驱动每一帧的演进：
+1. **驱动逻辑大脑**：调用 `team.on_frame_update()`，循环更新全队成员的 ASM、技能 CD 及属性审计。
+2. **驱动物理实体**：调用 `_entities` 中各实体的 `update()`，处理敌人移动、召唤物行为等。
+3. **状态清理**：移除生命周期结束或已销毁的实体。
 
-## 3. 核心抽象
-### 3.1 场景容器 (CombatSpace)
-- **实体索引**：维护实体的 (X, Z) 坐标与朝向。
-- **查询接口**：`get_entities_in_2d_area(origin, shape, params)`。
+## 3. 空间模型
+### 3.1 坐标系统
+- **XZ 平面**：用于所有 AOE 形状（圆、矩形）的碰撞判定。
+- **Y 轴 (高度)**：用于下落攻击判定。下落攻击技能会通过 `on_frame_update` 修改角色的 Y 坐标，当 Y <= 0 时触发落地冲击。
 
-### 3.2 战斗实体 (CombatEntity)
-- **位置属性**：`(x, z)`。
-- **朝向属性**：`facing_angle`（用于扇形攻击判定）。
+### 3.2 判定接口
+- `get_entities_in_range(origin, radius, faction)`：检索指定半径内的所有实体（含场上角色）。
+- `get_entities_in_box(origin, length, width, facing, faction)`：检索矩形范围内的实体。
+- `broadcast_damage(attacker, damage)`：核心接口。根据 `AttackConfig` 的物理参数执行全场扫描并分发伤害。
+
+## 4. 与 Team 的协作关系
+- **单一来源**：空间通过 `set_team` 建立与队伍的关联。
+- **物理隔离**：确保空间中永远只存在“场上”那个物理点，避免后台角色被 AOE 错误命中。
+- **驱动唯一性**：角色逻辑仅由 `Team` 驱动一次，物理查询仅作为快照数据读取。
+
+---
+*版本: V2.4.1 (Scene-Centric & Separated Management)*
+*更新日期: 2026-02-14*
+
