--- a/docs/core/动作状态机.md
+++ b/docs/core/动作状态机.md
@@ -1,54 +1,44 @@
 # Core - 动作状态机 (ASM Engine)
 
-`ActionManager` 是仿真的核心驱动器，负责实体动作的物理时序、连招管理以及精细化取消逻辑。
+`ActionManager` 负责实体动作的物理时序、连招管理以及精细化取消逻辑。
 
 ---
 
 ## 1. 核心数据结构
 
-### 1.1 ActionFrameData (动作元数据)
-描述一个动作固有的物理与时间参数。在 V2.4 中，引入了类型感知与连招索引。
-- **`action_type`**: 业务类型标签（如 `normal_attack`, `dash`, `elemental_skill`）。用于全局中断判定与逻辑重置。
-- **`combo_index`**: 连招段位标识。`0` 代表非连招动作，`1+` 代表具体段位。
-- **`interrupt_frames`**: 取消窗口字典。
-    - *匹配逻辑*：优先查找 `action_type` 对应的帧数，若无则查找 `any` 通配符。
-- **`hit_frames`**: 伤害判定点序列（1-based）。
-
-### 1.2 ActionInstance (动作实例)
-代表当前正在物理运行的动作，持有 `elapsed_frames`（已流逝帧数）。
+### 1.1 ActionInstance (动作实例)
+代表当前正在物理运行的动作。
+- **物理状态**: `elapsed_frames`（已流逝帧数）。
+- **生命周期**: 
+    - **自动结束**: `elapsed_frames` 达到 `total_frames`。
+    - **逻辑终止**: 技能对象通过 `action_manager._terminate_current()` 手动结束（如下落攻击触地）。
+    - **取消**: 被更高优先级的动作中断。
 
 ---
 
-## 2. 自动化连招管理 (V2.4)
+## 2. 级联驱动模型 (V2.4)
 
-ASM 引擎现在内置了对普攻连招的逻辑支持：
-
-1.  **自动段位分配**：
-    当请求类型为 `normal_attack` 的动作且未指定 `combo_index` 时，ASM 会自动根据当前的 `combo_counter` 分配段位。
-2.  **连击重置 (Reset Timer)**：
-    - **超时重置**：若实体进入 `IDLE` 状态超过 120 帧（2 秒），连击计数器自动归 1。
-    - **覆盖重置**：当执行非普攻类动作（如技能、冲刺）时，连击计数器立即归 1（除非特定角色有“连招保持”特性）。
-3.  **循环机制**：
-    连击计数器达到 `max_combo`（默认为 5）后，下一次普攻自动回到 1 段。
+ASM 的推进不再由模拟器直接控制，而是遵循以下驱动链：
+1. **脉冲**: `Simulator` 触发全局帧。
+2. **分发**: `CombatSpace` 调用 `Team.on_frame_update()`。
+3. **触达**: `Character` 调用 `action_manager.on_frame_update()`。
 
 ---
 
 ## 3. 驱动逻辑
 
 ### 3.1 动作请求流程 (`request_action`)
-1.  **连招同步**：根据上述规则更新 `combo_index` 和 `combo_counter`。
-2.  **中断检查**：
-    - 对比 `current_action.interrupt_frames[next_action.action_type]` 与 `current_action.elapsed_frames`。
-    - 若满足条件，则终止当前动作并启动新动作。
-3.  **结果反馈**：若无法中断，则直接返回 `False` 拒绝请求。
+1.  **自动连招同步**：如果是 `normal_attack`，ASM 自动分配 `combo_index` 并推进 `combo_counter`。
+2.  **标识符统一**：请求名必须匹配 `elemental_skill` 等后端标准 Key。
+3.  **中断检查**：
+    - 对比 `current_action.interrupt_frames[next_action.action_type]` 与已流逝帧数。
+    - 若满足取消窗口，则强制注销当前动作并启动新动作。
 
 ### 3.2 帧驱动 (`on_frame_update`)
-- **位移处理**：将 `horizontal_dist` 平摊到总帧数执行位移。
-- **命中触发**：
-    - 到达判定点时，执行 `_trigger_hit()`。
-    - 触发 `origin_skill.on_execute_hit(hit_index)`。
-    - **注意**：此时不应传递目标，而应由技能通过系统执行空间广播。
+- **位移处理**：将 `horizontal_dist` 平摊到总帧数执行 X/Z 位移。
+- **命中触发**：到达 `hit_frames` 时调用 `origin_skill.on_execute_hit()`。
+- **外部联动**: 下落攻击等物理相关动作在 `Skill.on_frame_update` 中控制 Y 轴，并通过 ASM 接口控制动作生命周期。
 
 ---
-*版本: V2.4 (Automated Combo Chain)*
-*更新日期: 2026-02-12*
+*版本: V2.4.1 (Scene-Centric & Cascade Driver)*
+*更新日期: 2026-02-14*
