--- a/docs/core/技能系统.md
+++ b/docs/core/技能系统.md
@@ -8,26 +8,34 @@
 
 在 V2.4 架构中，技能对象不再持有任何业务状态（如连击索引、计时器），它们唯一的职责是 **“根据意图映射配置”**。
 
-### 1.1 核心接口契约
+### 1.1 统一标识符 (Action Keys)
+UI 传入的动作 ID 必须与 `Character.skills` 字典的 Key 严格一致。标准 Key 如下：
+- `normal_attack`: 普通攻击。
+- `elemental_skill`: 元素战技。
+- `elemental_burst`: 元素爆发。
+- `charged_attack`: 重击。
+- `plunging_attack`: 下落攻击。
+- `dash`, `jump`, `skip`: 移动与等待。
+
+### 1.2 核心接口契约
 - **`to_action_data(intent)`**: 
     - **逻辑**: 根据意图字典从角色 `data.py` 中提取对应的帧数与物理配置。
-    - **自动连招**: 对于普攻，该方法只需返回对应段位的元数据，ASM 会自动处理段位推进。
+    - **高度判定**: 下落攻击等技能在此处根据当前高度决定“高空/低空”模式，并将快照存入 ActionData。
 - **`on_execute_hit(hit_index)`**: 
     - **职责**: 到达判定帧时，发布 `BEFORE_DAMAGE` 事件。
-    - **规范**: 必须使用“空间广播”模式，严禁在此时手动搜索单一目标。
+    - **规范**: 必须使用“空间广播”模式，通过 `ctx.space.broadcast_damage` 分发。
 
 ---
 
 ## 2. 标准化技能组件
 
-项目提供了一系列通用组件，角色只需通过注入 `data.py` 的字典即可完成实装。
-
 ### 2.1 普通攻击 (`NormalAttackSkill`)
-- **自动映射**: 自动关联 `ACTION_FRAME_DATA["NORMAL_X"]` 和 `ATTACK_DATA["NORMAL_X"]`。
-- **多段支持**: 通过 `hit_index` 自动索引 `NORMAL_ATTACK_DATA` 中的倍率。
+- **自动段位**: 调用时若未指定索引，会自动从 ASM 获取当前 `combo_counter`。
 
-### 2.2 移动技能 (`DashSkill`, `JumpSkill`)
-- **物理化**: 产出带有类型标签的动作，由 ASM 驱动。位移逻辑在 `on_frame_update` 回调中实现。
+### 2.2 物理联动逻辑 (`on_frame_update`)
+技能对象通过 `on_frame_update` 处理跨帧的业务逻辑：
+- **下落攻击**: 每帧修改角色高度（Y轴），检测落地时刻触发冲击伤害并终止动作。
+- **状态监测**: 在后台持续更新计时器、触发元素附着或生成微粒。
 
 ---
 
@@ -36,34 +44,23 @@
 ```python
 class MyElementalSkill(SkillBase):
     def to_action_data(self, intent=None) -> ActionFrameData:
-        # 1. 从局部配置中心获取数据
-        frames = ACTION_FRAME_DATA["SKILL_PRESS"]
-        physics = ATTACK_DATA["SKILL_PRESS"]
+        # 1. 直接通过 backend key 索引配置
+        frames = ACTION_FRAME_DATA["elemental_skill"]
         
-        # 2. 构造并返回
+        # 2. 构造物理快照
         return ActionFrameData(
-            name="SKILL_PRESS",
+            name="元素战技",
             action_type="elemental_skill",
-            total_frames=frames["total_frames"],
-            hit_frames=frames["hit_frames"],
-            interrupt_frames=frames["interrupt_frames"],
-            attack_config=AttackConfig(
-                element_u=physics["element_u"],
-                hitbox=HitboxConfig(shape=AOEShape.SPHERE, radius=physics["radius"])
-            ),
+            # ... 配置时序与位移
             origin_skill=self
         )
 
     def on_execute_hit(self, hit_index: int):
         # 触发伤害广播
+        dmg_obj = Damage(...)
         self.caster.event_engine.publish(GameEvent(EventType.BEFORE_DAMAGE, ...))
 ```
 
 ---
-
-## 4. 元数据发现 (Metadata Discovery)
-UI 通过类方法 `get_action_metadata()` 获取参数 Schema（如滑块、下拉框），生成的 `intent` 字典将作为参数传回 `to_action_data`。
-
----
-*版本: V2.4 (Stateless Factory)*
-*更新日期: 2026-02-12*
+*版本: V2.4.1 (Scene-Centric & Stateless Factory)*
+*更新日期: 2026-02-14*
