--- a/docs/architecture/system/模拟流程详述.md
+++ b/docs/architecture/system/模拟流程详述.md
@@ -15,22 +15,23 @@ flowchart TD
         B1 --> B2["Team & Character 构建"]
         B2 --> B3["Weapon & Artifact 装配"]
         B3 --> B4["Target & Space 注册"]
-        B4 --> B5["Action Parser 指令解析"]
+        B4 --> B5["Space.set_team 建立关联"]
     end
 
     B5 --> C{"Simulator 模拟器"}
 
     subgraph Loop ["执行循环 (Loop - Frame by Frame)"]
-        C --> C1["指令入队检测"]
-        C1 --> C2["ASM 动作状态机更新"]
-        C2 --> C3["System Manager 子系统驱动"]
-        C3 --> C4["CombatSpace 物理碰撞检测"]
-        C4 --> C5["Event Engine 事件广播"]
-        C5 -- "下一帧" --> C
+        C --> C1["Context.advance_frame 驱动"]
+        C1 --> C2["CombatSpace.on_frame_update"]
+        C2 --> C3["Team.on_frame_update (角色逻辑)"]
+        C2 --> C4["物理实体更新 (敌人/召唤物)"]
+        C --> C5["指令入队探测 (_try_enqueue)"]
+        C --> C6["Event Engine 帧结算事件"]
+        C6 -- "下一帧" --> C
     end
 
-    C1 -. "触发前/后置事件" .-> C5
-    C3 -. "触发伤害/反应事件" .-> C5
+    C3 -. "触发命中回调" .-> C6
+    C4 -. "触发碰撞/伤害事件" .-> C6
 
     C -- "终止条件达成" --> D["Audit System 审计结果"]
     
@@ -46,35 +47,38 @@ flowchart TD
 ## 2. 阶段详解
 
 ### 阶段一：配置解析 (Configuration)
-UI 层导出包含 `context_config` (队伍/环境) 和 `sequence_config` (指令序列) 的 JSON 数据。此阶段不涉及任何对象实例化，仅作为数据载体。
+UI 层导出标准化的 JSON 数据。动作标识符（Action ID）已与后端 Key 统一（如 `elemental_skill`, `normal_attack`），不再需要转换映射。
 
 ### 阶段二：环境组装 (Assembly)
 由 `SimulationAssembler` 驱动：
-1.  **创建 Context**：实例化 `SimulationContext`，挂载全局事件引擎和子系统。
-2.  **构建队伍**：`TeamFactory` 根据 ID 实例化角色，同步数据库基础属性。
-3.  **动态装配**：将武器技能、圣遗物套装效果以 `Effect` 形式挂载至实体。
-4.  **注入坐标**：将角色与目标根据配置注册到 `CombatSpace` 的特定 X, Z 坐标。
+1.  **创建 Context**：实例化 `SimulationContext`。
+2.  **构建队伍**：`TeamFactory` 创建角色，并将 `Team` 实例注入到 `CombatSpace` 中。
+3.  **动态同步**：`CombatSpace` 通过 `set_team` 自动感知场上角色，不再手动注册玩家实体。
+4.  **注入坐标**：将目标（Enemy）根据配置注册到 `CombatSpace`。
 
 ### 阶段三：帧级驱动 (Execution)
-模拟器以 60FPS (16.67ms/帧) 的步长推进：
-1.  **指令下发**：模拟器检测当前是否有角色处于 `IDLE` 状态，若有则从队列提取下一个 `ActionCommand` 传给 `ActionManager`。
-2.  **动作机更新 (ASM)**：`ActionInstance` 推进当前帧数，平摊位移，并根据 `hit_frames` 触发命中回调。
-3.  **子系统响应**：
-    *   **DamageSystem**：处理伤害流水线 (Snapshot -> Critical -> Reaction -> Audit)。
-    *   **ReactionSystem**：处理元素反应的副作用 (生成实体、扩散、减抗)。
-    *   **Health/EnergySystem**：维护血量与能量的动态平衡。
-4.  **物理空间更新**：`CombatSpace` 更新所有实体的位置，处理位移广播。
+模拟器以 60FPS 的步长推进，采用 **“单一入口，级联驱动”** 模式：
+1.  **脉冲触发**：`Simulator` 调用 `Context.advance_frame()`。
+2.  **物理与逻辑链**：
+    *   `Context` 驱动 `CombatSpace.on_frame_update()`。
+    *   `CombatSpace` 先驱动 `Team.on_frame_update()`，确保**所有角色**（场上+后台）的 ASM、CD、充能得到更新。
+    *   `CombatSpace` 随后驱动内部存储的**物理实体**（敌人、召唤物等）。
+3.  **指令下发**：模拟器检测 `Team.current_character` 的状态，若空闲则从队列提取下一个指令并执行 `perform_action`。
+4.  **子系统响应**：通过事件引擎处理伤害（DamageSystem）、反应（ReactionSystem）及数值审计。
 
 ### 阶段四：分析阶段 (Analysis)
-当指令队列清空且所有动作结束时，仿真终止：
-*   汇总 `ctx.total_damage`。
-*   通过 `DamageAuditSystem` 回溯每一笔伤害的审计链 (Audit Trail)，展示加成来源。
-*   导出全帧快照用于可视化回放。
+当指令队列清空且 `Team` 中所有成员的 ASM 均处于 IDLE 状态时，仿真终止。
 
 ---
 
 ## 3. 核心设计原则
 
-*   **数据驱动 (Data-Driven)**：仿真逻辑与原生数据解耦，通过组装器完成映射。
+*   **场景中心化 (Scene-Centric)**：`CombatSpace` 是战斗世界的主管，包含了物理实体与逻辑队伍。
+*   **驱动内聚**：角色本体逻辑驱动完全收敛于 `Team`，物理感知由 `Space` 动态合并。
 *   **计算即审计 (Audit on Compute)**：每一帧产生的数值变动必须携带来源声明。
-*   **物理同步 (Physics Sync)**：逻辑层动作与物理层位置在同一帧内完成同步，确保护盾、扩散等空间机制的准确性。
+*   **物理同步 (Physics Sync)**：下落攻击等高度敏感动作由物理高度（Y轴）实时驱动，而非固定帧数。
+
+---
+*版本: V2.4.1 (Scene-Centric & Cascade Driver)*
+*更新日期: 2026-02-14*
+
