docs: 更新适配文档

--- a/docs/architecture/system/角色子类适配指南.md
+++ b/docs/architecture/system/角色子类适配指南.md
@@ -22,8 +22,8 @@ character/REGION/char_name_en/
 
 ### 2.1 物理与逻辑解耦 (Decoupling)
 **准则**：角色不再单独注册到物理空间，而是通过 `Team` 进行管理。
-- **逻辑归 Team**：全队角色的血量、能量、Buff 状态统一通过 `self.ctx.team.get_members()` 访问。
-- **物理归 Space**：在 `CombatSpace` 中，玩家阵营仅占用一个物理点（活跃点）。切换角色时，坐标（`pos`, `facing`）由 `Team` 自动同步。
+- **级联驱动**：全队角色的逻辑（ASM、技能 CD、充能等）统一由 `Team.on_frame_update()` 驱动。
+- **物理感知**：`CombatSpace` 现在包含了 `Team`。在执行空间检索（如 AOE）时，空间会自动合并当前活跃角色的物理信息。坐标继承与物理点切换由 `Team` 自动处理。
 
 ### 2.2 局部配置中心 (`data.py`)
 严禁在逻辑代码中硬编码数值。`data.py` 必须分为以下独立字典：
@@ -65,19 +65,23 @@ character/REGION/char_name_en/
 
 ### 4.2 `_setup_character_components()`
 **职责**：实例化技能对象与能量系统。
-**原子化原则**：严禁在普攻组件中混写重击逻辑。
+**命名要求**：字典 Key 必须直接匹配后端 Action ID。
 ```python
 def _setup_character_components(self):
     self.skills = {
-        "normal": FurinaNormalAttack(self.skill_params[0], self),
-        "charged": FurinaChargedAttack(self.skill_params[0], self), # 物理分离
-        "plunge": FurinaPlungingAttack(self.skill_params[0], self), # 物理分离
-        "skill": FurinaElementalSkill(self.skill_params[1], self),
-        "burst": FurinaElementalBurst(self.skill_params[2], self),
-        "dash": DashSkill(caster=self), # 挂载通用移动组件
-        "jump": JumpSkill(caster=self)
+        "normal_attack": FurinaNormalAttack(self.skill_params[0], self),
+        "charged_attack": FurinaChargedAttack(self.skill_params[0], self),
+        "plunging_attack": FurinaPlungingAttack(self.skill_params[0], self),
+        "elemental_skill": FurinaElementalSkill(self.skill_params[1], self),
+        "elemental_burst": FurinaElementalBurst(self.skill_params[2], self),
+        "dash": DashSkill(caster=self),
+        "skip": SkipSkill(caster=self)
     }
 ```
+
+### 4.3 `_perform_tick()`
+**职责**：实现角色每帧的业务逻辑。
+**规范**：严禁直接重写 `on_frame_update()`。必须将逻辑挂载至 `_perform_tick()` 钩子，以确保基类的生命周期维护逻辑（如帧数自增）不被破坏。
 
 ### 4.2 `_setup_effects()`
 **职责**：填充天赋与命座列表。
@@ -92,49 +96,45 @@ def _setup_effects(self):
 ## 5. 意图驱动与动作生成 (Intent-Driven)
 
 ### 5.1 精准动作工厂化 (`skills.py`)
-技能类必须实现 `to_action_data(intent)` 接口，执行物理与时序的“手工装配”：
+技能类必须实现 `to_action_data(intent)` 接口，执行物理与时序的“手工装配”。
+
+**核心规范**：
+1.  **原生索引**：`ACTION_FRAME_DATA` 必须使用中文键名（如 `元素战技-荒`）。
+2.  **标签映射**：技能应在 `__init__` 中管理 `self.label_map`（物理动作名 -> 伤害倍率标签）。
 
 ```python
 class ElementalSkill(SkillBase):
     def to_action_data(self, intent: dict = None) -> ActionFrameData:
-        # 1. 提取实测数据 (保持原生中文映射)
-        frames = ACTION_FRAME_DATA["SKILL_PRESS"]
-        physics = ATTACK_DATA["元素战技"] # 使用字典 Key 作为识别名
+        # 1. 提取实测数据 (使用统一的中文 Key)
+        frames = ACTION_FRAME_DATA["元素战技-荒"]
+        physics = ATTACK_DATA["元素战技"] 
         
         return ActionFrameData(
             name="元素战技",
+            action_type="elemental_skill",
             total_frames=frames["total_frames"],
             hit_frames=frames["hit_frames"],
             interrupt_frames=frames["interrupt_frames"],
             attack_config=AttackConfig(
                 attack_tag=physics["attack_tag"],
-                icd_group=physics["icd_group"],
-                # 执行形状映射：'球' -> AOEShape.SPHERE
-                hitbox=HitboxConfig(shape=self._map_shape(physics["shape"]), ...)
-            )
+                hitbox=HitboxConfig(shape=AOEShape.SPHERE, radius=physics["radius"])
+            ),
+            origin_skill=self
         )
 ```
 
 ---
 
 ## 6. 动作元数据规范 (Action Metadata Discovery)
-UI 通过类方法感知参数 Schema，实现无码化渲染。角色类必须实现 `get_action_metadata()` 类方法。
+UI 直接传输标准后端 Key，不再进行 ID 映射。角色类通过 `get_action_metadata()` 类方法声明其可接受的参数。
 
-### 6.1 动作 Key 映射表 (UI ID to Internal Key)
-UI 使用的动作 ID 与元数据字典中的 Key 必须遵循以下映射：
+### 6.1 统一 Action Key
+标准 Key 包含：`normal_attack`, `elemental_skill`, `elemental_burst`, `charged_attack`, `plunging_attack`, `dash`, `skip`。
 
-| UI 动作 ID | 元数据 Key | 说明 |
-| :--- | :--- | :--- |
-| `normal` | `normal_attack` | 普通攻击 |
-| `charged` | `charged_attack` | 重击 |
-| `plunging` | `plunging_attack` | 下落攻击 |
-| `skill` | `elemental_skill` | 元素战技 |
-| `burst` | `elemental_burst` | 元素爆发 |
-| `dash` | `dash` | 冲刺 |
-| `jump` | `jump` | 跳跃 |
-| `skip` | `skip` | 等待/跳过帧 (通用) |
+### 6.2 普通攻击 `count` 逻辑
+UI 参数名必须为 **`count`** (类型: int)，代表“执行连招次数”。模拟器层的 `ActionParser` 会自动将其展开为多条连续指令。
 
-### 6.2 参数定义字段 (Parameter Schema)
+### 6.3 参数定义字段 (Parameter Schema)
 `params` 列表中的每个参数项需包含：
 - **`key`**: (str) 传递给 `to_action_data` 的字典键。
 - **`label`**: (str) UI 显示的文本。
@@ -142,9 +142,8 @@ UI 使用的动作 ID 与元数据字典中的 Key 必须遵循以下映射：
 - **`default`**: 默认值。
 - **`min` / `max`**: (Optional) 数值范围。
     - **Slider 触发**: 当 `type="int"` 且 `max - min <= 10` 时，UI 自动呈现为滑动条。
-- **`options`**: (Optional) 仅 `select` 类型有效，格式为 `{"value": "Label"}`。
 
-### 6.3 实现示例
+### 6.4 实现示例
 ```python
 @classmethod
 def get_action_metadata(cls) -> Dict[str, Any]:
@@ -152,7 +151,7 @@ def get_action_metadata(cls) -> Dict[str, Any]:
         "normal_attack": {
             "label": "普通攻击",
             "params": [
-                {"key": "index", "label": "段位", "type": "int", "min": 1, "max": 4, "default": 1}
+                {"key": "count", "label": "连招次数", "type": "int", "min": 1, "max": 5, "default": 1}
             ]
         },
         "skip": {
@@ -167,12 +166,12 @@ def get_action_metadata(cls) -> Dict[str, Any]:
 ---
 
 ## 7. 关键原则总结
-1.  **空间广播**：禁止在技能中寻找 `target`，应发布 `BEFORE_DAMAGE` 事件，由系统执行范围判定。
+1.  **空间广播**：禁止在技能中寻找 `target`，应通过 `ctx.space.broadcast_damage` 执行范围判定。
 2.  **去物理化**：UI 仅传输逻辑意图（Intent），物理表现由 `data.py` 与 `ASM` 共同决定。
-3.  **注册规范**：统一使用英文标识名 (route) 作为目录名，中文名用于 Registry 注册。
-4.  **物理高度感知**：对于下落攻击等特殊动作，必须在 `on_frame_update` 中进行 Y 轴监测，落地判定由物理位置驱动而非定时帧。
-5.  **标准化辅助动作**：所有角色应挂载 `SkipSkill`（Key 为 `skip`），用于在旋转编排中模拟等待与空闲帧。
+3.  **驱动唯一性**：逻辑驱动权完全收拢于 `Team` 与 `_perform_tick`，严禁多重驱动角色。
+4.  **物理高度感知**：下落攻击必须在 `on_frame_update` 中进行 Y 轴监测，状态快照由启动瞬间决定。
+5.  **标准化辅助动作**：所有角色应挂载 `SkipSkill`（Key 为 `skip`），用于在序列中插入空闲等待。
 
 ---
-*版本: V2.4.1 (Action Metadata Spec)*
-*更新日期: 2026-02-13*
+*版本: V2.4.2 (Scene-Centric & Cascade Driving)*
+*更新日期: 2026-02-14*
